Fixed spacing

--- a/styles/box-model.css
+++ b/styles/box-model.css
@@ -14,12 +14,12 @@
     width:300px;
     margin-left:auto;
     margin-right:auto;
-    margin-top:5px;
-    margin-bottom:5px;
+    margin-top:25px;
+    margin-bottom:25px;
 }
 
 .big-box{
-    
+    padding:20px;
     background-color: paleturquoise;
 }
 
